# crypto_trade

./: Cargo.toml  clean_ipc.sh  demo.sh  run_simple_test.sh  run_test.sh  test.sh  test_debug.sh  test_full.sh  test_iceoryx.sh  test_trading_engine.sh
common/: Cargo.toml  build.rs
common/proto/: risk_control.proto
common/src/: binary.rs  config.rs  events.rs  ipc.rs  lib.rs  messages.rs  risk_proto.rs  signals.rs  types.rs
config/: exchanges.toml  trading_engine.toml  trading_engine_test.toml
config/symbols/: binance_spot.csv  bybit_futures.csv
doc/: pp.md  prepost.md  siganl进程.md  交易流程.md  执行引擎.md  时间戳维护.md  架构图.md
pre-post-processor/: Cargo.toml
pre-post-processor/src/: main.rs
pre-post-processor/src/order/: arbitrage.rs  mod.rs  order.rs  order_manager.rs  order_state.rs
pre-post-processor/src/pipeline/: mod.rs  pipeline.rs  shared_state.rs
pre-post-processor/src/risk_control/: mod.rs  risk_calculator.rs  risk_initializer.rs  risk_rules.rs  risk_state.rs
signal-collector/: Cargo.toml
signal-collector/src/: config.rs  event_generator.rs  ipc_publisher.rs  ipc_subscriber.rs  main.rs  signal_manager.rs  trigger.rs
test-signal-generator/: Cargo.toml
test-signal-generator/src/: ice_broadcast_generator.rs  ice_generator.rs  ice_mpsc_generator.rs  ice_mpsc_generator_fixed.rs  test_runner.rs  zmq_generator.rs.bak
trading-engine/: Cargo.toml
trading-engine/src/: main.rs
trading-engine/src/adapters/: adapter.rs  binance.rs  bybit.rs  mod.rs  okex.rs
trading-engine/src/config/: mod.rs
trading-engine/src/executor/: executor.rs  idempotent.rs  mod.rs  order_builder.rs  response_handler.rs  signer.rs  types.rs
trading-engine/src/health/: connection_selector.rs  health_tracker.rs  mod.rs
trading-engine/src/ipc/: ipc_manager.rs  mod.rs
trading-engine/src/ws_pool/: binance_connection.rs  bybit_connection.rs  connection.rs  message.rs  mod.rs  okex_connection.rs  pool.rs
