[workspace]
members = [
    "common",
    "signal-collector",
    "pre-post-processor",
    "trading-engine",
    "test-signal-generator"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HFT Team"]

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
iceoryx2 = "0.4"
zmq = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
crossbeam = "0.8"
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
tokio-tungstenite = "0.24"
futures = "0.3"
once_cell = "1.20"
prost = "0.13"
prost-types = "0.13"
