[package]
name = "trading-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
iceoryx2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dashmap.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
futures.workspace = true